--- a/.github/workflows/SAST_Slither.yml
+++ b/.github/workflows/SAST_Slither.yml
@@ -18,17 +18,19 @@ jobs:
     - name: Run Slither
       uses: crytic/slither-action@v0.1.1
       continue-on-error: true
-      id: slither
+      #id: slither
       with:
         sarif: results.sarif
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: ${{ steps.slither.outputs.sarif }}
+        #sarif_file: ${{ steps.slither.outputs.sarif }}
+        sarif_file: results.sarif
         
     - name: Use the Upload Artifact GitHub Action
       uses: actions/upload-artifact@v2
       with:
           name: result
-          path: ${{ steps.slither.outputs.sarif }}
+          #path: ${{ steps.slither.outputs.sarif }}
+          path: results.sarif
