--- a/.github/workflows/sast_slither.yml
+++ b/.github/workflows/sast_slither.yml
@@ -30,4 +30,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
           name: result 
-          path: results.sarif
+          path: results.sarif #comment
