--- a/.github/workflows/sast_slither.yml
+++ b/.github/workflows/sast_slither.yml
@@ -29,5 +29,5 @@ jobs:
     - name: Use the Upload Artifact GitHub Action
       uses: actions/upload-artifact@v2
       with:
-          name: result 
+          name: sast_slither_output 
           path: results.sarif #commentss
