--- a/.github/workflows/sast_slither.yml
+++ b/.github/workflows/sast_slither.yml
@@ -28,4 +28,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
           name: sast_slither_output 
-          path: results.sarif #commentss
+          path: results.sarif #commentsss
