--- a/.github/workflows/sast_slither.yml
+++ b/.github/workflows/sast_slither.yml
@@ -18,6 +18,7 @@ jobs:
       continue-on-error: true 
       with:
         sarif: results.sarif
+        exclude_low: false
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v2
